# windows-fast-file-explorer

./: Cargo.toml  build.rs
src/: lib.rs  main.rs
src/core/: file_metadata.rs
src/view/: app-window.slint
src/view/componets/: file-item.slint  file-list.slint  sidebar.slint  statusbar.slint  toolbar.slint
src/view/styles/: theme.slint
