[package]
name = "file_explorer_windows"
version = "0.1.0"
edition = "2024"

[dependencies]

# UI para o explorador de arquivos
slint = "1.14.1"

#Performance de sistema de arquivos
srusty-files = "0.2.0"
rayon = "1.11.0"
walkdir = "2.5.0"

# Hashmap theread-safe
dashmap = "6.1.0"

# utils
serde = {version = "1.0.228", features = ["derive"]}
